<resources>
  <string name="app_name">java-gtc</string>

  <!-- User defined strings -->
  <!-- Main menu -->
  <string name="menu_title">Guess That Compound!</string>
  <string name="menu_subtitle">Can you guess all the compounds?</string>
  <string name="menu_btn_start">Start</string>
  <string name="menu_btn_learn">Learn</string>

  <!-- Choose compounds -->
  <string name="choose_title">Select Your</string>
  <string name="choose_title_highlight">COMPOUNDS!</string>
  <string name="choose_btn_ionic">Ionic Compounds</string>
  <string name="choose_btn_covalent">Covalent Compounds</string>
  <string name="choose_total_compounds">Total items: 0</string>
  <string name="title_activity_show_score">ShowScore</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>