<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".screens.MainMenu">

  <TextView
    android:text="@string/menu_title"
    android:textColor="@color/black_500"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:id="@+id/textTitle"
    android:textSize="40sp"
    android:gravity="center"
    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="116dp"
    app:autoSizeMinTextSize="28sp"
    app:fontFamily="@font/poppins_bold"/>
  <TextView
    android:text="@string/menu_subtitle"
    android:textSize="24sp"
    android:gravity="center"
    android:textColor="@color/black_300"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:id="@+id/textView2"
    app:layout_constraintTop_toBottomOf="@+id/textTitle" app:layout_constraintStart_toStartOf="@+id/textTitle"
    app:layout_constraintEnd_toEndOf="@+id/textTitle" app:fontFamily="@font/poppins" android:layout_marginTop="56dp"
    app:layout_constraintHorizontal_bias="0.0"/>
  <Button
    android:text="@string/menu_btn_learn"
    android:textColor="@color/black_500"
    android:textSize="18sp"
    android:layout_width="250dp"
    android:layout_height="70dp" android:id="@+id/btnLearn"
    app:strokeColor="@color/black_500"
    app:strokeWidth="1dp"
    app:fontFamily="@font/poppins_bold"
    app:backgroundTint="@color/red_300"
    app:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnStart" app:layout_constraintStart_toStartOf="@+id/btnStart"
    app:layout_constraintEnd_toEndOf="@+id/btnStart" app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintVertical_bias="0.0"/>
  <Button
    android:text="@string/menu_btn_start"
    android:textColor="@color/black_500"
    android:textSize="18sp"
    android:layout_width="250dp"
    android:layout_height="70dp" android:id="@+id/btnStart"
    app:textAllCaps="false"
    app:strokeColor="@color/black_500"
    app:strokeWidth="1dp"
    app:backgroundTint="@color/yellow_500"
    app:fontFamily="@font/poppins_bold"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    app:layout_constraintEnd_toEndOf="@+id/textView2"
  android:layout_marginTop="108dp" app:layout_constraintStart_toStartOf="@+id/textView2"/>
</androidx.constraintlayout.widget.ConstraintLayout>